// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInputDemo Component JSON 1`] = `
.c6 {
  display: none;
}

.c8 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 1051;
}

.c7 {
  padding-bottom: 0.8333333333333334em;
  box-shadow: none;
}

.c9 {
  height: 2.166666666666667em;
  font-size: 1.2rem;
  line-height: 1;
  color: rgba(0,0,0,0.75);
  box-sizing: border-box;
}

.c10 {
  border-color: transparent;
  left: 1.3333333333333335em;
  bottom: 0.25em;
  border-width: 0.4166666666666667em 0.4166666666666667em 0;
  border-top-color: rgba(0,0,0,0.75);
  position: absolute;
  border-style: solid;
  font-size: 1.2rem;
  line-height: 1;
  color: rgba(0,0,0,0.75);
}

.c11 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.5;
  max-width: 20.833333333333336em;
  padding: 0.5em 0.6666666666666667em;
  color: #ffffff;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0,0,0,0.75);
  border-radius: 0.33333333333333337em;
  box-shadow: 0 0.16666666666666669em 0.6666666666666667em rgba(0,0,0,0.15);
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2 {
  position: relative;
  display: inline-block;
}

.c14 {
  position: relative;
  display: inline-block;
  margin: 0.8333333333333334em;
}

.c3 {
  height: 2.666666666666667em;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c3:hover {
  border-color: #684fff;
}

.c3::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c3::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c3:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c3::placeholder {
  color: rgba(0,0,0,0.25);
}

.c3:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c12 {
  height: 2.666666666666667em;
  cursor: not-allowed;
  width: 16.666666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  background: #f2f2f2;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c12:hover {
  border-color: #cccccc;
}

.c12::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c12::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c12:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c12::placeholder {
  color: rgba(0,0,0,0.25);
}

.c12:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c15 {
  height: 2em;
  cursor: text;
  width: 29.166666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c15:hover {
  border-color: #684fff;
}

.c15::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c15::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c15:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c15::placeholder {
  color: rgba(0,0,0,0.25);
}

.c15:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c16 {
  height: 2.666666666666667em;
  cursor: text;
  width: 29.166666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c16:hover {
  border-color: #684fff;
}

.c16::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c16::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c16:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c16::placeholder {
  color: rgba(0,0,0,0.25);
}

.c16:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c17 {
  height: 3.3333333333333335em;
  cursor: text;
  width: 29.166666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c17:hover {
  border-color: #684fff;
}

.c17::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c17::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c17:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c17::placeholder {
  color: rgba(0,0,0,0.25);
}

.c17:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c1 {
  width: 16.666666666666668em;
  position: relative;
  display: inline-block;
}

.c13 {
  margin: 0.8333333333333334em;
  width: 29.166666666666668em;
  position: relative;
  display: inline-block;
}

.c5 {
  background: transparent;
  left: 2.5em;
  color: #999999;
  top: 50%;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 2;
  font-size: 1.2rem;
}

.c0 {
  float: left;
  margin-left: 50px;
}

<div>
  <div
    className="c0"
  >
    <p>
      formatter AmountInput
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={false}
      >
        <input
          className="c3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
        请填写金额
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
    <p>
      default AmountInput
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={false}
      >
        <input
          className="c3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
        请填写金额
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
    <p>
      禁用状态 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={true}
      >
        <input
          className="c12"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      small size
    </p>
    <span
      className="c13"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c14"
        disabled={false}
      >
        <input
          className="c15"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="small"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
        请填写金额
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
    <p>
      default size
    </p>
    <span
      className="c13"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c14"
        disabled={false}
      >
        <input
          className="c16"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
        请填写金额
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
    <p>
      large size
    </p>
    <span
      className="c13"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c14"
        disabled={false}
      >
        <input
          className="c17"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="large"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
        请填写金额
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      受限Input
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={false}
      >
        <input
          className="c3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
    <p>
      有默认值的 受限Input
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={false}
      >
        <input
          className="c3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥123,456"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span
              onClick={[Function]}
            >
              壹拾贰万叁仟肆佰伍拾陆元整
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      amountPrefix: '¥' transform: false 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={false}
      >
        <input
          className="c3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="¥"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span>
              
            </span>
          </div>
        </div>
      </div>
    </div>
    <p>
      amountPrefix: '$' transform: false 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <span
        className="sv c2"
        disabled={false}
      >
        <input
          className="c3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          size="default"
          value="$"
        />
        <i
          className="lugia-icon-reminder_close  c4"
          onClick={[Function]}
        />
      </span>
      <span
        className="c5"
        onClick={[Function]}
      >
         
      </span>
    </span>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            fx="bottom"
          />
          <div
            className="c11"
          >
            <span>
              $
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  1`] = `
Array [
  .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c2 {
  height: 2.666666666666667em;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c2:hover {
  border-color: #684fff;
}

.c2::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2::placeholder {
  color: rgba(0,0,0,0.25);
}

.c2:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c0 {
  width: 16.666666666666668em;
  position: relative;
  display: inline-block;
}

.c4 {
  background: transparent;
  left: 2.5em;
  color: #999999;
  top: 50%;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 2;
  font-size: 1.2rem;
}

<span
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <span
      className="sv c1"
      disabled={false}
    >
      <input
        className="c2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        readOnly={false}
        size="default"
        value="¥"
      />
      <i
        className="lugia-icon-reminder_close  c3"
        onClick={[Function]}
      />
    </span>
    <span
      className="c4"
      onClick={[Function]}
    >
      请填写内容
       
    </span>
  </span>,
  .c0 {
  display: none;
}

.c2 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 1051;
}

.c1 {
  padding-bottom: 0.8333333333333334em;
  box-shadow: none;
}

.c3 {
  height: 2.166666666666667em;
  font-size: 1.2rem;
  line-height: 1;
  color: rgba(0,0,0,0.75);
  box-sizing: border-box;
}

.c4 {
  border-color: transparent;
  left: 1.3333333333333335em;
  bottom: 0.25em;
  border-width: 0.4166666666666667em 0.4166666666666667em 0;
  border-top-color: rgba(0,0,0,0.75);
  position: absolute;
  border-style: solid;
  font-size: 1.2rem;
  line-height: 1;
  color: rgba(0,0,0,0.75);
}

.c5 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.5;
  max-width: 20.833333333333336em;
  padding: 0.5em 0.6666666666666667em;
  color: #ffffff;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0,0,0,0.75);
  border-radius: 0.33333333333333337em;
  box-shadow: 0 0.16666666666666669em 0.6666666666666667em rgba(0,0,0,0.15);
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          fx="bottom"
        />
        <div
          className="c5"
        >
          <span
            onClick={[Function]}
          >
            
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`AmountInputDemo props: placeholder  2`] = `
Array [
  .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c2 {
  height: 2.666666666666667em;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 0.33333333333333337em;
  border: 1px;
  border-style: solid;
  border-color: #cccccc;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c2:hover {
  border-color: #684fff;
}

.c2::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2::placeholder {
  color: rgba(0,0,0,0.25);
}

.c2:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

.c0 {
  width: 16.666666666666668em;
  position: relative;
  display: inline-block;
}

.c4 {
  background: transparent;
  left: 2.5em;
  color: #999999;
  top: 50%;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 2;
  font-size: 1.2rem;
}

<span
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <span
      className="sv c1"
      disabled={false}
    >
      <input
        className="c2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        readOnly={false}
        size="default"
        value="¥"
      />
      <i
        className="lugia-icon-reminder_close  c3"
        onClick={[Function]}
      />
    </span>
    <span
      className="c4"
      onClick={[Function]}
    >
      
       
    </span>
  </span>,
  .c0 {
  display: none;
}

.c2 {
  position: absolute;
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0,0,0,0.2);
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: 1051;
}

.c1 {
  padding-bottom: 0.8333333333333334em;
  box-shadow: none;
}

.c3 {
  height: 2.166666666666667em;
  font-size: 1.2rem;
  line-height: 1;
  color: rgba(0,0,0,0.75);
  box-sizing: border-box;
}

.c4 {
  border-color: transparent;
  left: 1.3333333333333335em;
  bottom: 0.25em;
  border-width: 0.4166666666666667em 0.4166666666666667em 0;
  border-top-color: rgba(0,0,0,0.75);
  position: absolute;
  border-style: solid;
  font-size: 1.2rem;
  line-height: 1;
  color: rgba(0,0,0,0.75);
}

.c5 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.5;
  max-width: 20.833333333333336em;
  padding: 0.5em 0.6666666666666667em;
  color: #ffffff;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0,0,0,0.75);
  border-radius: 0.33333333333333337em;
  box-shadow: 0 0.16666666666666669em 0.6666666666666667em rgba(0,0,0,0.15);
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          fx="bottom"
        />
        <div
          className="c5"
        >
          <span
            onClick={[Function]}
          >
            
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;
